# vqr

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  data_gen.ipynb  environment.conda-lock.yml  environment.yml  main.py  nlvqr-house.py  nlvqr-meps.py  nonlin-y.pkl  nonlinear-vqr-bio.py  plot_vqr_as_matching.py  pyproject.toml  real-data-plots.py  reg_vs_cvx_plots.py  separable-bio.py  separable-blog-data.py  separable-house.py  separable-linear-bio.py  separable-linear-blog-data.py  separable-linear-house.py  separable-linear-meps.py  separable-meps.py  setup.cfg  tmp.py  tmp2.py  tmp3.py  tmp4.py  tmp5.py  tmp8.py  vmr_plots.py  vqr-bio.py  vqr-housing.py  vqr-meps.py
.github/workflows/: main.yml
data/: bio.pkl  house.pkl  meps_20.pkl
experiments/: __init__.py  base.py  cond_banana.py  cond_banana_cvae.py  cvr.py  main.py  optimization.py  real_data_exp.py  rr_vqr.py  scale.py  sqr.py  stars.py  stars_vae.py  utils.py  vqe.py
experiments/data/: base.py  cond_banana.py  mvn.py  nonlinear_data.py  quantile.py  real_data.py  shapes.py  synthetic_glasses.py
experiments/datasets/: cond_banana.py  mvn.py  quantile.py  shapes.py  synthetic_glasses.py
experiments/log/: __init__.py
experiments/logging/: __init__.py  logging.yaml
experiments/utils/: helpers.py  metrics.py  parallel.py  split.py  tensors.py
notebooks/: .gitignore  00-scratch.ipy  01-VQ.ipynb  01-VQE.ipynb  01-VQE.py  02-Coverage.ipynb  02-Coverage.py  02-VQR_cond-banana.ipynb  02-VQ_Plots.ipynb  03-RR_Intervals.ipynb  03-RR_Intervals.py  03-VQ_contours.ipynb  04-VQR.ipynb  04-VQR.py  04-scale_plots.ipynb  05-VMR.ipynb  05-VMR.py  06-scale_plots.ipynb  06-scale_plots.py  data_gen.ipynb  data_gen.py  fig1.ipynb  fig1.py  nonlin-y.pkl  quantile_mvn.ipynb
playground/: tmp.py  tmp1.py  tmp2.py
scripts/: optimization.sh  scale.sh
src/vqr/: __init__.py  api.py  coverage.py  cvqf.py  data.py  data_banana.py  main.py  models.py  nonlinear_data.py  plot.py  sinkhorn.py  utils.py  vector_2d.py  vqr.py
src/vqr/cfg/: __init__.py  logging.yaml
src/vqr/solvers/: __init__.py  base.py  cvx.py  pot.py  regularized_lse.py
src/vqr/solvers/dual/: regularized_lse.py
src/vqr/solvers/primal/: cvx.py  pot.py
tests/: __init__.py  conftest.py  test_cli.py  test_data.py  test_metrics.py  test_minimal.py  test_notebooks.py  test_sq.py  test_vqe.py  test_vqr.py
tests/logging/: logging.yaml
tests/tests/: test_models.py
