# See here the documentation for this file's format:
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files


[metadata]
name = vqr
description = Tools for Vector Quantile Regression
author = Aviv A. Rosenberg & Sanketh Vedula
author-email = avivr@cs.technion.ac.il
license = proprietary
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8; variant=GFM
url = url = https://gitlab.com/vistalab-technion/proteins
project-urls =

# change if running only on windows, mac or linux (comma-separated)
platforms = any
# add here all kinds of additional classifiers as defined under
# https = //pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools_scm

# install_requires = numpy; scipy

# require a specific python version, e.g. python 2.7 or > = 3.4
python_requires = >=3.8

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    vqr = vqr.main:main

[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True

[aliases]
dists = bdist_wheel

[bdist_wheel]
# use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
# options for the devpi = PyPI server and packaging tool
# vcs export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel
